Closed Bug 2001009 Opened 8 months ago Closed 7 months ago

'Move Message to' filter action is not logged anymore.

Categories

(Thunderbird :: Filters, defect)

Thunderbird 145
defect

Tracking

(thunderbird146 wontfix, thunderbird147 wontfix)

RESOLVED FIXED
148 Branch
Tracking Status
thunderbird146 --- wontfix
thunderbird147 --- wontfix

People

(Reporter: rik, Assigned: welpy-cw)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

Created filters, enabled Filter Log, then applied filters

Actual results:

Messages were filtered as expected, but no entries made in filterlog.html

Expected results:

filtered messages should leave trace in this log file

Tried it now. Works for me (on linux).

This is on OSX v15.6

Hello,
I have tested this issue and couldn’t reproduce it.
I have tested on TB 145.0(20251112194829) and TB 146.0b3(20251118190535) on macOS Sequoia 15.7.1.
I have created a new filter, enabled Filter Log.
I ranned the filter in the desired folder, messages were filtered correctly and the entries of the filter were displayed in the Filter log.

I have this issue with TBird 145.0, running under Windows 11 Pro 24H2.

Messages are being filtered according to my configured rules, but entries are no longer made im the filter log. The latest log entries are dated 14/11/2025 (format dd/mm/yyyy), which suggest to me that this was started release 145.0

WFM on mac with nightly build and 147.0b3

Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Regressed by: 1823084
Summary: Message filters not leaving entries in log → 'Move Message to filter action is not logged anymore.
Summary: 'Move Message to filter action is not logged anymore. → 'Move Message to' filter action is not logged anymore.
Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
See Also: → 2006215

So, I see I am not the only one with this problem. I have the same problem after using this feature for many years. Based on some log dates, it appears to have possibly been introduced with the v145 update. I am in the U.S. using Thunderbird v146.0.1 and Windows 10 Pro with all the latest updates. I hope you find a fix soon as it is especially useful when testing the accuracy of new filters and finding filtered messages when I do an oopsy and filter the entire inbox.

Target Milestone: --- → 148 Branch

Pushed by arschmitz@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/579083012f48
Fix logging 'Move Message to' filter action. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED

thanks for the fix @arschmitz!

but if i'm reading this thread correctly, this fix won't apply until v148? Which will be made available ... when?

Flags: needinfo?(arschmitz)
Flags: needinfo?(arschmitz)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: