Bug 2001009 - Fix logging 'Move Message to' filter action. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D277992

--HG--
extra : amend_source : 5133262cca9acefa2f9ccc0592e6e795cf61488e